--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <script>
         
 var text="";
-const fullText = ("توقف عن هذا الان");
+const fullText = ("🤚🤚توقف عن هذا الان");
 const texts=["stop"];
 for (let i = 1; i <= fullText.length; i++) {
     text=fullText.slice(0,i);
